fix the problem that the photo wall click upload area is too small.

--- a/Arsenal/Web/src/index.css
+++ b/Arsenal/Web/src/index.css
@@ -21,3 +21,11 @@
   width: 100%;
   height: 100%;
 }
+
+.arsenal-filled-and-centered {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
